he hecho el create snippet y he optimizado cosas como el icon en snippet y modificado el framework

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>FastSnippets</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,3 +18,11 @@
     <app-root></app-root>
   </body>
 </html>
+
+
+<!-- TODO:
+ 1. añadir el creador de snippets, que funcione
+ 2. poner favicon
+ 3. desplegar y que funcione el back con el front
+
+  -->
